--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link href="https://myfonts.ru/myfonts?fonts=rotterburg-stylish-free" rel="stylesheet" type="text/css" />
+  <link href="https://db.onlinewebfonts.com/c/2a293a4b9e09436388cbc3a7fae42265?family=Rotterburg+Stylish+FREE" rel="stylesheet">
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml"
     href="https://oyina.uz/storage/generations/December2023/UTctVFOsBnipnXpz45dW.png" />
